# rubik_cube

./: CMakeLists.txt  conanfile.txt  config.json
src/: CMakeLists.txt
src/3d_engine/: CMakeLists.txt
src/3d_engine/core/: engine.cpp  engine.h  keyboard_controller.cpp  keyboard_controller.h  mouse_controller.cpp  mouse_controller.h  scene.cpp  scene.h  window.cpp  window.h
src/3d_engine/events/: mouse_moved.h
src/3d_engine/primitives/: plane.cpp  plane.h
src/3d_engine/renderer/: camera.cpp  camera.h  material.h  mesh.cpp  mesh.h  object.cpp  object.h  shader.cpp  shader.h  vertex.h
src/3d_engine/shaders/: fragment.glsl  vertex.glsl
src/game/: CMakeLists.txt  cubie.cpp  cubie.h  main.cpp  rubik_cube.cpp  rubik_cube.h
src/rubik_detector/: CMakeLists.txt  custom_contour.cpp  custom_contour.h  image.cpp  image.h  rubik_detector.cpp  rubik_detector.h  utils.cpp  utils.h  viewer.cpp  viewer.h
src/rubik_engine/: CMakeLists.txt  cubie_data.cpp  cubie_data.h  face_data.cpp  face_data.h  rubik.cpp  rubik.h
test/: CMakeLists.txt  main_test.cpp  rubik_engine.cpp  rubik_engine.h
